@@ -23,6 +23,7 @@ public class Strings {
 	public static final String INSTALL_LOG = "Changelog";
 	public static final String SHOW_INSTALL_LOG = "Show changes";
 	public static final String AUTH_STATUS = "Authenticating...";
+	public static final String UPDATE_SERVERLIST = "Updating serverlist...";
 	public static final String OPTIONS = "Options";
 	public static final String TITLE = "AsieLauncher";
 	public static final String OPTIONAL_MODS = "Optional mods:";
